Fixed broken UI on safari

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App-header {
   position: absolute;
   top: 0;
+  left: 0;
+  right: 0;
   height: 60px;
   width: 100%;
   color: white;
@@ -56,15 +58,24 @@
 }
 
 .App-search-autocomplete {
-  display: block;
   position: absolute;
-  overflow: auto;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  overflow-y: auto;
   z-index: 200;
   top: 120px;
   min-width: 320px;
   max-width: 400px;
   max-height: 320px;
   background: #FFF;
+}
+
+@media (max-width: 320px) {
+  .App-search-autocomplete {
+    min-width: 0;
+  }
 }
 
 .App-movie-recommendations {
